--- a/src/components/Episodes/Episodes.css
+++ b/src/components/Episodes/Episodes.css
@@ -9,6 +9,11 @@ h1 {
   font-size: 60px;
 }
 
+h2 {
+  padding: 5px;
+  font-size: 30px;
+}
+
 body {
   padding: 10rem;
   margin-left: 15%;
@@ -48,8 +53,11 @@ main {
 }
 
 .details {
-  padding: 0.25rem;
-  font-size: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  font-size: 40px;
 }
 
 .details-column {
@@ -57,4 +65,24 @@ main {
   flex-direction: column;
   flex: 1;
   gap: 20px;
+}
+
+.watch-btn {
+  color: black;
+  background-color: rgb(255, 255, 255);
+  font-weight: 600;
+  width: 450px;
+  height: 30px;
+  box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+
+h3 {
+  font-size: 25px;
+  padding: 5px;
+}
+
+p {
+  padding: 10px;
+  font-size: 25px;
 }
